fix margin collapse

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -5,14 +5,18 @@ h1 {
   margin: 0;
 }
 /* STYLES */
-body {
-  background-color: #55294A;
+body,
+html {
   margin: 0;
   height: 100%;
+}
+body {
+  background-color: #55294A;
 }
 .grid {
   max-width: 1440px;
   margin: 0 auto;
+  position: relative;
 }
 .home-content {
   margin-top: 400px;
@@ -28,6 +32,7 @@ h1 {
   height: 100%;
   position: absolute;
   top: 0;
+  width: 34%;
 }
 .image-area {
   background-color: #55294A;
@@ -44,7 +49,8 @@ h1 {
 }
 .image-area img {
   height: 100%;
-  mix-blend-mode: darken;
+  mix-blend-mode: multiply;
   -webkit-filter: grayscale(100%) contrast(1.75);
           filter: grayscale(100%) contrast(1.75);
 }
+/* Resets */
